@@ -328,3 +328,13 @@ def decorated3(x):
 @decorator(x * x * y for x in range(3))  # [undefined-variable]
 def decorated4(x):
     print(x)
+
+
+# https://github.com/PyCQA/pylint/issues/5111
+# AssignAttr in orelse block of 'TYPE_CHECKING' shouldn't crash
+# Name being assigned must be imported in orelse block
+if TYPE_CHECKING:
+    pass
+else:
+    from types import GenericAlias
+    object().__class_getitem__ = classmethod(GenericAlias)
