@@ -58,6 +58,10 @@ Release date: TBA
 
   Closes #3614
 
+* Fix crash with ``AssignAttr`` in ``if TYPE_CHECKING`` blocks.
+
+  Closes #5111
+
 
 What's New in Pylint 2.11.1?
 ============================
